--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
 		<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
+		<h1 style="text-align: center;">GIF Search Engine</h1>
 		<div class="container container-padding50">
 			<input type="text" class="js-userinput container-textinput"  />
 			
 			<button class="js-go container-button">Go!</button>
 		</div>
+		<div class="results"></div>
 		<div class="container container-padding50 js-container">
 
 		</div>
